# ckanext-harbour_theme

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/harbour_theme/: cli.py  helpers.py  plugin.py  views.py
ckanext/harbour_theme/assets/: script.js  webassets.yml
ckanext/harbour_theme/logic/: action.py  auth.py  schema.py  validators.py
ckanext/harbour_theme/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/harbour_theme/tests/logic/: test_action.py  test_auth.py  test_validators.py
