[metadata]
name = ckanext-harbour_theme
version = 0.0.1
description = UCL Harbour explorer CKAN theme
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nicholas-owen/ckanext-harbour_theme
author = N Owen
author_email = n.owen@ucl.ac.uk
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN UCL harbour explorer data FAIR

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             harbour_theme = ckanext.harbour_theme.plugin:HarbourThemePlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/harbour_theme/i18n/ckanext-harbour_theme.pot
width = 80

[init_catalog]
domain = ckanext-harbour_theme
input_file = ckanext/harbour_theme/i18n/ckanext-harbour_theme.pot
output_dir = ckanext/harbour_theme/i18n

[update_catalog]
domain = ckanext-harbour_theme
input_file = ckanext/harbour_theme/i18n/ckanext-harbour_theme.pot
output_dir = ckanext/harbour_theme/i18n
previous = true

[compile_catalog]
domain = ckanext-harbour_theme
directory = ckanext/harbour_theme/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
